# mcity_proxy

./: .gitignore  README.md  package.xml  proxy_launch.sh  setup.cfg  setup.py
config/: cyclonedds.xml  ekf.yaml  ekf_global.yaml  ekf_local.yaml  imu_filter.yaml  navsat_transform.yaml
docs/: MAPP Wiring Diagram.odg
launch/: basestation.launch.py  ntrip_client.launch.py  proxy_platform.launch.py  rmp_core.launch.py  robot_visualization.launch.py  segwayrmp.launch.py  sim_proxy.launch.py  sim_rmp_core.launch.py  visualize_proxy.launch.py
maps/: empty_map.yaml
mcity_proxy/: action_manager.py  calibrate_heading_server.py  cmd_vel_spin.py  linear_velocity_open_loop_controller.py  mcity_proxy.py  move_circle_action_server.py  move_distance_action_server.py  proxy_control.py  proxy_params.py  waypoint_nav_action_server.py
meshes/: steering_arm.stl
models/: basic_rmp.urdf  basic_rmp.urdf.xacro
models/basic_rmp_description/: basic_rmp.sdf  model.config  model.sdf.old
params/: dual_ekf_navsat.yaml  nav2_params.yaml  proxy_params.yaml
rviz/: nav2_config.rviz  urdf_config.rviz
scripts/: magnetometer_calibration.sh  proxy_action_manager_move_distance.sh  proxy_boot.sh  proxy_calibrate.sh  proxy_disable.sh  proxy_enable.sh  proxy_launch.sh  proxy_move_distance.py  proxy_move_distance.sh  proxy_openloop_distance.sh  proxy_openloop_time.sh  proxy_steer.sh
worlds/: neighborhood.world  smalltown.world
