<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcity_proxy</name>
  <version>0.0.1</version>
  <description>ROS2 package providing all of the core functionality for Mcity's autonomous proxy.</description>
  <maintainer email="rdlrobot@umich.edu">Ryan D. Lewis</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>segway_msgs</build_depend>
  <build_depend>segwayrmp</build_depend>
  <build_depend>ublox</build_depend>
  <build_depend>ntrip_client</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
